[project]
name = "nython"
version = "0.1.0"
authors = [
  { name="Sebastian Kern"},
]
description = "A node based editor and runtime environment for python"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sebastianjkern/nython"
Issues = "https://github.com/sebastianjkern/nython/issues"

[build-system]
requires = ["setuptools >= 77.0.3", "dearpygui"]
build-backend = "setuptools.build_meta"